<resources>
    <string name="app_name">Asystent Gier Planszowych</string>
    <string name="title_activity_log_in">Logowanie</string>
    <string name="title_activity_sign_up">Zarejestruj się</string>

    <!-- Strings related to login -->
    <string name="prompt_login_email">Login / email</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Hasło</string>
    <string name="prompt_username">Nazwa użytkownika</string>
    <string name="prompt_confirm_password">Potwierdź hasło</string>
    <string name="action_sign_in">Zaloguj się</string>
    <string name="action_sign_in_short">Zaloguj się</string>
    <string name="error_invalid_email">Nieprawidłowy adres email</string>
    <string name="error_invalid_password">Hasło musi zawierać przynajmniej 8 znaków, dużą literę i cyfrę</string>
    <string name="error_incorrect_password">Nieprawidłowe hasło</string>
    <string name="error_field_required">Pole wymagane</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="error_invalid_username">Nieprawidłowa nazwa użytkownika</string>
    <string name="error_password_mismatch">Niezgodność haseł</string>
    <string name="connection_error">Brak połączenia z Internetem</string>
    <string name="sign_in_facebook">Zaloguj się przez Facebook</string>
    <string name="sign_up">Zarejestruj się</string>
    <string name="startTab1Text">Jesteś mistrzem gry i chcesz zaprosić graczy na niesamowitą sesję RPG?</string>
    <string name="startTab2Text">Kochasz gry bez prądu i poszukujesz nowych planszówek?</string>
    <string name="startTab3Text">A może marzysz o znalezieniu idealnej drużyny do gry online?</string>
    <string name="startTabText1">Jesteś mistrzem gry i chcesz zaprosić graczy na niesamowitą sesję RPG?</string>
    <string name="startTabText2">Kochasz gry bez prądu i poszukujesz nowych planszówek?</string>
    <string name="startTabText3">A może marzysz o znalezieniu idealnej drużyny do gry online?</string>
    <string name="startScreenContentDesc">A set of images showing pieces from board and videogames.</string>
    <string name="sign_up_encouragement">Nie masz jeszcze konta?</string>
    <string name="log_in_title">Logowanie</string>
    <string name="log_in_catchphrase">Witamy spowrotem! Czeka na Ciebie mnóstwo nowych gier!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="StartCounting">Start</string>
    <string name="StopCounting">Anuluj</string>
    <string name="about">O mnie</string>
    <string name="sign_up_title">Rejestracja</string>
    <string name="current_password">Aktualne hasło</string>
    <string name="new_password">Nowe hasło</string>
    <string name="save">Zapisz</string>
    <string name="update_profile_success">Zaktualizowano profil</string>
    <string name="update_profile_error">Błąd - nie można zaktualizować profilu</string>
    <string name="sign_up_catchphrase">Zaczynamy! To zajmie nie więcej czasu niż rozłożenie planszy!</string>
    <string name="sign_up_password_hint">Hasło musi zawierać przynajmniej 8 znaków, dużą literę i cyfrę</string>
    <string name="pause">Pause</string>
    <string name="cancel">Cancel</string>
    <string name="timePickerHours">godzina:</string>
    <string name="timePickerMinutes">minuta:</string>
    <string name="timePickerSeconds">sekunda:</string>
    <string name="timePickerOkButton">Ok</string>
    <string name="timerFragmentTimePlaceholder">00:00:00</string>
    <string name="dicePickDiceText">Wybierz kostkę</string>
    <string name="dicePickNoOFDicesText"> Wybierz liczbę kostek</string>
    <string name="diceFragmentPickADiceText">Wybierz kostkę</string>
    <string name="diceFragmentPickADicePickBtn">WYBIERZ</string>
    <string name="diceFragmentPickADiceCancelBtn">ANULUJ</string>
    <string name="diceFragmentPickADiceOkBtn">POWRÓT</string>
    <string name="diceRollDiceText">Rzuć kostką</string>
    <string name="diceImagePlaceholder">dice_image_placeholder</string>
    <string name="diceFragmentDiceImageTextPlaceholder">dice_placeholder</string>
    <string name="error_invalid_login">Nieprawidłowa nazwa użytkownika lub adres email</string>
    <string name="sign_up_failed">Błąd - rejestracja nie powiodła się</string>
    <string name="sign_up_success">Zarejestrowano pomyślnie</string>
    <string name="login_success">Zalogowano pomyślnie</string>
    <string name="customDiceListItemDiceLabel">Kostka:</string>
    <string name="customDiceListItemResultLabel">Wynik:</string>
    <string name="diceNotPickedText">nie wybrano kostki</string>
    <string name="diceShowHistoryText">Zobacz historię rzutów</string>
    <string name="addUser">Dodaj użytkownika</string>
    <string name="add">Dodaj</string>
    <string name="added_user">Dodano użytkownika</string>
    <string name="add_user_error">Błąd - nie można dodać użytkownika</string>


    <string name="chuj"> kutas</string>
</resources>
