<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/diceLL"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:orientation="vertical"
    android:padding="@dimen/normalVerticalMargin"
    android:weightSum="1"
    tools:context="pwcdma.asystentgierplanszowych.fragment.DiceFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5">

        <ImageView
            android:id="@+id/diceNotPickedImage"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_groups_no_groups_logo" />

        <TextView
            android:id="@+id/diceNotPickedText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|bottom"
            android:text="@string/diceNotPickedText"
            android:textAppearance="@style/TabsActive"
            android:visibility="visible" />

        <ImageView
            android:id="@+id/diceK4image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:src="@drawable/ic_dice_k4"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/diceK6image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingBottom="55dp"
            android:paddingEnd="0dp"
            android:paddingStart="10dp"
            android:paddingTop="30dp"
            android:src="@drawable/ic_dice_k6"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/diceK8image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="30dp"
            android:src="@drawable/ic_dice_k8"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/diceK10image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingTop="40dp"
            android:src="@drawable/ic_dice_k10"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/diceK12image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:src="@drawable/ic_dice_k12"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/diceK20image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="15dp"
            android:src="@drawable/ic_dice_k20"
            android:visibility="gone" />

        <TextView
            android:id="@+id/diceResult"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textAppearance="@style/DiceResultBig" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5"
        android:gravity="bottom"
        android:orientation="vertical">


        <Button
            android:id="@+id/dicePickDiceBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/smallVerticalButtonMargin"
            android:layout_marginTop="@dimen/smallVerticalButtonMargin"
            android:background="@drawable/button_primary_selector"
            android:text="@string/dicePickDiceText"
            android:textAllCaps="true"
            android:textAppearance="@style/ButtonLabelPrimary" />

        <Button
            android:id="@+id/diceRollDiceBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/smallVerticalButtonMargin"
            android:layout_marginTop="@dimen/smallVerticalButtonMargin"
            android:background="@drawable/button_primary_selector"
            android:text="@string/diceRollDiceText"
            android:textAllCaps="true"
            android:textAppearance="@style/ButtonLabelPrimary" />

        <Button
            android:id="@+id/diceResultHistoryBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/smallVerticalButtonMargin"
            android:layout_marginTop="@dimen/smallVerticalButtonMargin"
            android:background="@drawable/button_primary_selector"
            android:text="Zobacz historię rzutów"
            android:textAllCaps="true"
            android:textAppearance="@style/ButtonLabelPrimary" />


    </LinearLayout>

</LinearLayout>
